--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ main .banner{
 
 
 main .banner-inicio{
-    background-image: url("/res1.jfif");
+    background-image: url("/Gupta-s_restaurant.github.io/res1.jfif");
 }
 
 
