--- a/style.css
+++ b/style.css
@@ -318,7 +318,7 @@ footer .address #langs{
 
 
 main .banner-menu{
-    background-image: url("/me1.jpg");
+    background-image: url("/Gupta-s_restaurant.github.io/me1.jpg");
 }
 
 
@@ -351,15 +351,15 @@ main .categories div{
 
 
 main .categories a div.category0{
-    background-image: url("/res2.jfif");
+    background-image: url("/Gupta-s_restaurant.github.io/res2.jfif");
 }
 
 
 main .categories a div.category1{
-    background-image: url("/ni1.jpg");
+    background-image: url("/Gupta-s_restaurant.github.io/ni1.jpg");
 }
 main .categories a div.category6{
-    background-image: url("/de1.jfif");
+    background-image: url("/Gupta-s_restaurant.github.io/de1.jfif");
 }
 
 
@@ -367,14 +367,14 @@ main .categories a div.category6{
 
 
 main .categories a div.category3{
-    background-image: url("/si1.jpg");
+    background-image: url("/Gupta-s_restaurant.github.io/si1.jpg");
 }
 
 
 
 /* Page Contact */
 main .banner-contact{
-    background-image: url("/res1.jfif");
+    background-image: url("/Gupta-s_restaurant.github.io/res1.jfif");
 }
 
 
@@ -412,22 +412,22 @@ main #contact .enviar{
 
 /* Sub pages */
 main .drinks-banner{
-    background-image: url("/ni1.jpg");
+    background-image: url("/Gupta-s_restaurant.github.io/ni1.jpg");
 }
 
 
 main .desserts-banner{
-    background-image: url("/de1.jfif");
+    background-image: url("/Gupta-s_restaurant.github.io/de1.jfif");
 }
 
 
 main .meats-banner{
-    background-image: url("/si1.jpg");
+    background-image: url("/Gupta-s_restaurant.github.io/si1.jpg");
 }
 
 
 main .fishes-banner{
-    background-image: url("/res2.jfif");
+    background-image: url("/Gupta-s_restaurant.github.io/res2.jfif");
 }
 
 
